--- a/netbsd/homebuilt_computer.html
+++ b/netbsd/homebuilt_computer.html
@@ -29,7 +29,7 @@
 <h2 id="configure">マシン構成</h2>
 <p>初めて自作パソコンに挑戦することもあり、ツクモの店員さんに予算はおおよそ10万円ほどですと伝えてパーツの見積もりをもらうことにしました。ゲームをするわけではないのでグラフィックボードは安くてもよいのですが、頻繁にビルドする都合上CPUの熱は抑えたいのでケースとCPUクーラは評判が良いものをお願いしました。それで、集まったものがこちらです。</p>
 
-<table>
+<table class="tiny">
 <thead><tr><td>構成要素</td><td>名前</td></tr></thead>
 <tbody>
 <tr><td>CPU</td><td>AMD Ryzen 3600X</td></tr>
