--- a/netbsd/pkg_install.html
+++ b/netbsd/pkg_install.html
@@ -62,7 +62,7 @@ Package libxml2-2.9.5 has a denial-of-service vulnerability, see https://nvd.nis
 <p><code>pkg_create(1)</code>はその名の通りパッケージを作るためのコマンドです。/usr/pkgsrc/packages/Allにあるtarballは<code>pkg_create(1)</code>によって生成されています。</p>
 
 <p><code>pkg_create(1)</code>はパッケージに関する情報を含んだファイル（メタデータ）を必要とします。</p>
-<table>
+<table class="tiny">
 <thead><tr><th>メタデータ</th><th>内容</th></tr></thead>
 <tbody>
 <tr><td>+BUILD_INFO</td><td>ビルドした日時、コンパイラの種類とバージョン、コンパイラのフラグ、ライセンス……といったビルド環境の情報</td></tr>
