--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="/css/my.css">
 <style type="text/css">
 <!--
+table.article{border: 0;}
 th.date{text-align:left;padding: 0 0 1em 0;}
 th.article{text-align:left;padding:0 0 1em 2em;}
 td.article{padding:0 0 0 2em;}
@@ -35,11 +36,9 @@ td.article{padding:0 0 0 2em;}
 <h2 id="articles">記事</h2>
 
 <h3 id="netbsd">NetBSD</h3>
-<table style="border: 0;">
+<table class="article">
   <thead>
-    <tr>
-      <th class="date">更新日</th><th class="article">記事</th>
-    </tr>
+    <tr><th class="date">更新日</th><th class="article">記事</th></tr>
   </thead>
   <tbody>
     <tr><td>2021/10/30</td><td class="article"><a href="./netbsd/podman.html">NetBSDでPodmanからLinuxコンテナを動かす</a></td></tr>
@@ -65,11 +64,9 @@ td.article{padding:0 0 0 2em;}
 </table>
 
 <h3 id="freebsd">FreeBSD</h3>
-<table>
+<table class="article">
   <thead>
-    <tr>
-      <th class="date">更新日</th><th class="article">記事</th>
-    </tr>
+    <tr><th class="date">更新日</th><th class="article">記事</th></tr>
   </thead>
   <tbody>
     <tr><td>2021/10/16</td><td class="article"><a href="./freebsd/goss.html">gossを使ってFreeBSDサーバの設定をテストする</a></td></tr>
@@ -79,11 +76,9 @@ td.article{padding:0 0 0 2em;}
 </table>
 
 <h3 id="practice">プラクティス</h3>
-<table style="border: 0;">
+<table class="article">
   <thead>
-    <tr>
-      <th class="date">更新日</th><th class="article">記事</th>
-    </tr>
+    <tr><th class="date">更新日</th><th class="article">記事</th></tr>
   </thead>
   <tbody>
     <tr><td>2020/07/18</td><td class="article"><a href="./practice/html.html">私家版HTML文書執筆ガイド</a></td></tr>
@@ -94,11 +89,9 @@ td.article{padding:0 0 0 2em;}
 </table>
 
 <h3 id="essay">エッセイ</h3>
-<table style="border: 0;">
+<table class="article">
   <thead>
-    <tr>
-      <th class="date">更新日</th><th class="article">記事</th>
-    </tr>
+    <tr><th class="date">更新日</th><th class="article">記事</th></tr>
   </thead>
   <tbody>
     <tr><td>2020/09/12</td><td class="article"><a href="./essay/pkgsrc-fun.html">pkgsrcのたのしさ、FLOSSのたのしさ</a></td></tr>
