--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <link rel="stylesheet" type="text/css" href="/css/my.css">
 <style type="text/css">
 <!--
-table.article{border: 0;}
-th.date{text-align:left;padding: 0 0 1em 0;}
-th.article{text-align:left;padding:0 0 1em 2em;}
-td.article{padding:0 0 0 2em;}
+table.article{border:0;}
+th.date{border:unset;text-align:left;}
+th.article{border:unset;text-align:left;padding:0 0 0 2em;}
+td.article{border:unset;padding:0 0 0 2em;}
 -->
 </style>
 <title>e-yuuki.org</title>
