fix css: delete border

--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@ td.article{border:unset;padding:0 0 0 2em;}
     <tr><th class="date">更新日</th><th class="article">記事</th></tr>
   </thead>
   <tbody>
-    <tr><td>2021/10/30</td><td class="article"><a href="./netbsd/podman.html">NetBSDでPodmanからLinuxコンテナを動かす</a></td></tr>
-    <tr><td>2021/03/07</td><td class="article"><a href="./netbsd/ansible.html">AnsibleホストとしてNetBSDを扱う</a></td></tr>
-    <tr><td>2020/09/22</td><td class="article"><a href="./netbsd/jenkins.html">NetBSDにJenkinsをインストールする</a></td></tr>
-    <tr><td>2020/05/09</td><td class="article"><a href="./netbsd/sysupgrade.html">sysupgradeを使いsets単位でバイナリアップデートをする</a></td></tr>
-    <tr><td>2020/01/11</td><td class="article"><a href="./netbsd/testing_with_bhyve.html">vm-bhyveとZFSを使って効率的にNetBSD仮想マシンを管理する</a></td></tr>
-    <tr><td>2020/04/01</td><td class="article"><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></td></tr>
-    <tr><td>2020/07/18</td><td class="article"><a href="./netbsd/haxm.html">QEMUとHAXMによるハイパーバイザの利用</a></td></tr>
-    <tr><td>2019/12/29</td><td class="article"><a href="./netbsd/nvmm.html">QEMUとNVMMによるハイパーバイザの利用</a></td></tr>
-    <tr><td>2019/04/20</td><td class="article"><a href="./netbsd/update_pkgsrc.html">pkg_comp(8)による安全なpkgsrc(7)パッケージの更新</a></td></tr>
-    <tr><td>2020/04/04</td><td class="article"><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></td></tr>
-    <tr><td>2020/07/18</td><td class="article"><a href="./netbsd/pkg_install.html">pkg_installについて</a></td></tr>
-    <tr><td>2019/09/08</td><td class="article"><a href="./netbsd/chroot.html">chroot(8)を使ってホストから分離された環境を作る</a></td></tr>
-    <tr><td>2021/04/01</td><td class="article"><a href="./netbsd/buildbot.html">Buildbot on NetBSD</a></td></tr>
-    <tr><td>2019/08/06</td><td class="article"><a href="./netbsd/how_to_be_developer.html">NetBSD開発者になる方法</a></td></tr>
-    <tr><td>2019/04/27</td><td class="article"><a href="./netbsd/conoha.html">ConoHa VPS上でNetBSDを動かす</a></td></tr>
-    <tr><td>2019/05/21</td><td class="article"><a href="./netbsd/npf.html">npfを使ってファイアウォールを設定する</a></td></tr>
-    <tr><td>2019/08/06</td><td class="article"><a href="./netbsd/zfs.html">ZFS on NetBSD</a></td></tr>
-    <tr><td>2021/04/17</td><td class="article"><a href="./netbsd/zabbix.html">ZabbixによるNetBSDシステム監視</a></td></tr>
-    <tr><td>2019/12/27</td><td class="article"><a href="./netbsd/homebuilt_computer.html">NetBSDビルド環境を自作パソコンで作る</a></td></tr>
+    <tr><td class="date">2021/10/30</td><td class="article"><a href="./netbsd/podman.html">NetBSDでPodmanからLinuxコンテナを動かす</a></td></tr>
+    <tr><td class="date">2021/03/07</td><td class="article"><a href="./netbsd/ansible.html">AnsibleホストとしてNetBSDを扱う</a></td></tr>
+    <tr><td class="date">2020/09/22</td><td class="article"><a href="./netbsd/jenkins.html">NetBSDにJenkinsをインストールする</a></td></tr>
+    <tr><td class="date">2020/05/09</td><td class="article"><a href="./netbsd/sysupgrade.html">sysupgradeを使いsets単位でバイナリアップデートをする</a></td></tr>
+    <tr><td class="date">2020/01/11</td><td class="article"><a href="./netbsd/testing_with_bhyve.html">vm-bhyveとZFSを使って効率的にNetBSD仮想マシンを管理する</a></td></tr>
+    <tr><td class="date">2020/04/01</td><td class="article"><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></td></tr>
+    <tr><td class="date">2020/07/18</td><td class="article"><a href="./netbsd/haxm.html">QEMUとHAXMによるハイパーバイザの利用</a></td></tr>
+    <tr><td class="date">2019/12/29</td><td class="article"><a href="./netbsd/nvmm.html">QEMUとNVMMによるハイパーバイザの利用</a></td></tr>
+    <tr><td class="date">2019/04/20</td><td class="article"><a href="./netbsd/update_pkgsrc.html">pkg_comp(8)による安全なpkgsrc(7)パッケージの更新</a></td></tr>
+    <tr><td class="date">2020/04/04</td><td class="article"><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></td></tr>
+    <tr><td class="date">2020/07/18</td><td class="article"><a href="./netbsd/pkg_install.html">pkg_installについて</a></td></tr>
+    <tr><td class="date">2019/09/08</td><td class="article"><a href="./netbsd/chroot.html">chroot(8)を使ってホストから分離された環境を作る</a></td></tr>
+    <tr><td class="date">2021/04/01</td><td class="article"><a href="./netbsd/buildbot.html">Buildbot on NetBSD</a></td></tr>
+    <tr><td class="date">2019/08/06</td><td class="article"><a href="./netbsd/how_to_be_developer.html">NetBSD開発者になる方法</a></td></tr>
+    <tr><td class="date">2019/04/27</td><td class="article"><a href="./netbsd/conoha.html">ConoHa VPS上でNetBSDを動かす</a></td></tr>
+    <tr><td class="date">2019/05/21</td><td class="article"><a href="./netbsd/npf.html">npfを使ってファイアウォールを設定する</a></td></tr>
+    <tr><td class="date">2019/08/06</td><td class="article"><a href="./netbsd/zfs.html">ZFS on NetBSD</a></td></tr>
+    <tr><td class="date">2021/04/17</td><td class="article"><a href="./netbsd/zabbix.html">ZabbixによるNetBSDシステム監視</a></td></tr>
+    <tr><td class="date">2019/12/27</td><td class="article"><a href="./netbsd/homebuilt_computer.html">NetBSDビルド環境を自作パソコンで作る</a></td></tr>
   </tbody>
 </table>
 
@@ -69,9 +69,9 @@ td.article{border:unset;padding:0 0 0 2em;}
     <tr><th class="date">更新日</th><th class="article">記事</th></tr>
   </thead>
   <tbody>
-    <tr><td>2021/10/16</td><td class="article"><a href="./freebsd/goss.html">gossを使ってFreeBSDサーバの設定をテストする</a></td></tr>
-    <tr><td>2021/02/22</td><td class="article"><a href="./freebsd/pfrouting.html">pfを使い外部からのアクセスを内部ネットワークへリダイレクトする</a></td></tr>
-    <tr><td>2020/02/27</td><td class="article"><a href="./freebsd/office.html">執務環境としてのFreeBSD</a></td></tr>
+    <tr><td class="date">2021/10/16</td><td class="article"><a href="./freebsd/goss.html">gossを使ってFreeBSDサーバの設定をテストする</a></td></tr>
+    <tr><td class="date">2021/02/22</td><td class="article"><a href="./freebsd/pfrouting.html">pfを使い外部からのアクセスを内部ネットワークへリダイレクトする</a></td></tr>
+    <tr><td class="date">2020/02/27</td><td class="article"><a href="./freebsd/office.html">執務環境としてのFreeBSD</a></td></tr>
   </tbody>
 </table>
 
@@ -81,10 +81,10 @@ td.article{border:unset;padding:0 0 0 2em;}
     <tr><th class="date">更新日</th><th class="article">記事</th></tr>
   </thead>
   <tbody>
-    <tr><td>2020/07/18</td><td class="article"><a href="./practice/html.html">私家版HTML文書執筆ガイド</a></td></tr>
-    <tr><td>2019/12/17</td><td class="article"><a href="./practice/shellscript.html">私家版ShellScript Coding Style</a></td></tr>
-    <tr><td>2020/10/10</td><td class="article"><a href="./practice/remotework.html">リモートワークのプラクティス</a></td></tr>
-    <tr><td>2020/11/22</td><td class="article"><a href="./practice/monitoring.html">アラートが多すぎる&mdash;&mdash;システム監視について</a></td></tr>
+    <tr><td class="date">2020/07/18</td><td class="article"><a href="./practice/html.html">私家版HTML文書執筆ガイド</a></td></tr>
+    <tr><td class="date">2019/12/17</td><td class="article"><a href="./practice/shellscript.html">私家版ShellScript Coding Style</a></td></tr>
+    <tr><td class="date">2020/10/10</td><td class="article"><a href="./practice/remotework.html">リモートワークのプラクティス</a></td></tr>
+    <tr><td class="date">2020/11/22</td><td class="article"><a href="./practice/monitoring.html">アラートが多すぎる&mdash;&mdash;システム監視について</a></td></tr>
   </tbody>
 </table>
 
@@ -94,17 +94,17 @@ td.article{border:unset;padding:0 0 0 2em;}
     <tr><th class="date">更新日</th><th class="article">記事</th></tr>
   </thead>
   <tbody>
-    <tr><td>2020/09/12</td><td class="article"><a href="./essay/pkgsrc-fun.html">pkgsrcのたのしさ、FLOSSのたのしさ</a></td></tr>
-    <tr><td>2020/07/18</td><td class="article"><a href="./essay/free_flaws.html">自由を妨げるものとHyperbolaプロジェクト</a></td></tr>
-    <tr><td>2019/12/30</td><td class="article"><a href="./essay/github_actions.html">GitHub ActionsでホームページのCIを確立した</a></td></tr>
-    <tr><td>2019/08/19</td><td class="article"><a href="./essay/freeware_or_freesoftware.html">フリーウェアはフリーソフトウェアであるべきか？</a></td></tr>
-    <tr><td>2019/08/18</td><td class="article"><a href="./essay/floss_reading.html">FLOSS書籍について</a></td></tr>
-    <tr><td>2019/06/26</td><td class="article"><a href="./essay/remote_work.html">リモートワーカーになった</a></td></tr>
-    <tr><td>2021/04/01</td><td class="article"><a href="./essay/practice_tdd.html">初めてのテスト駆動開発（TDD）と感想</a></td></tr>
-    <tr><td>2019/04/13</td><td class="article"><a href="./essay/cc0code.html">CC0 HTMLコードを直す</a></td></tr>
-    <tr><td>2019/04/14</td><td class="article"><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></td></tr>
-    <tr><td>2020/02/08</td><td class="article"><a href="./essay/pkgintro.html">GNU/LinuxとBSD Unixのパッケージ概観</a></td></tr>
-    <tr><td>2020/02/08</td><td class="article"><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></td></tr>
+    <tr><td class="date">2020/09/12</td><td class="article"><a href="./essay/pkgsrc-fun.html">pkgsrcのたのしさ、FLOSSのたのしさ</a></td></tr>
+    <tr><td class="date">2020/07/18</td><td class="article"><a href="./essay/free_flaws.html">自由を妨げるものとHyperbolaプロジェクト</a></td></tr>
+    <tr><td class="date">2019/12/30</td><td class="article"><a href="./essay/github_actions.html">GitHub ActionsでホームページのCIを確立した</a></td></tr>
+    <tr><td class="date">2019/08/19</td><td class="article"><a href="./essay/freeware_or_freesoftware.html">フリーウェアはフリーソフトウェアであるべきか？</a></td></tr>
+    <tr><td class="date">2019/08/18</td><td class="article"><a href="./essay/floss_reading.html">FLOSS書籍について</a></td></tr>
+    <tr><td class="date">2019/06/26</td><td class="article"><a href="./essay/remote_work.html">リモートワーカーになった</a></td></tr>
+    <tr><td class="date">2021/04/01</td><td class="article"><a href="./essay/practice_tdd.html">初めてのテスト駆動開発（TDD）と感想</a></td></tr>
+    <tr><td class="date">2019/04/13</td><td class="article"><a href="./essay/cc0code.html">CC0 HTMLコードを直す</a></td></tr>
+    <tr><td class="date">2019/04/14</td><td class="article"><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></td></tr>
+    <tr><td class="date">2020/02/08</td><td class="article"><a href="./essay/pkgintro.html">GNU/LinuxとBSD Unixのパッケージ概観</a></td></tr>
+    <tr><td class="date">2020/02/08</td><td class="article"><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></td></tr>
   </tbody>
 </table>
 
