fix css: delete border in td

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 <!--
 table.article{border:0;}
-th.date{border:unset;text-align:left;}
+th,td.date{border:unset;text-align:left;}
 th.article{border:unset;text-align:left;padding:0 0 0 2em;}
 td.article{border:unset;padding:0 0 0 2em;}
 -->
