--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <!--
 table.article{border:0;}
 th,td.date{border:unset;text-align:left;}
-th.article{border:unset;text-align:left;padding:0 0 0 2em;}
-td.article{border:unset;padding:0 0 0 2em;}
+th,td.article{border:unset;text-align:left;padding:0 0 0 1em;}
 -->
 </style>
 <title>e-yuuki.org</title>
