--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ th,td.article{border:unset;text-align:left;padding:0 0 0 1em;}
   </thead>
   <tbody>
     <tr><td class="date">2021/10/16</td><td class="article"><a href="./freebsd/goss.html">gossを使ってFreeBSDサーバの設定をテストする</a></td></tr>
-    <tr><td class="date">2021/02/22</td><td class="article"><a href="./freebsd/pfrouting.html">pfを使い外部からのアクセスを内部ネットワークへリダイレクトする</a></td></tr>
+    <tr><td class="date">2021/02/22</td><td class="article"><a href="./freebsd/pfrouting.html">pfを使い外部からのアクセスを内部ネットワークへ転送する</a></td></tr>
     <tr><td class="date">2020/02/27</td><td class="article"><a href="./freebsd/office.html">執務環境としてのFreeBSD</a></td></tr>
   </tbody>
 </table>
