--- a/freebsd/pfrouting.html
+++ b/freebsd/pfrouting.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <article class="tiny">
-<h1>pfを使い外部からのアクセスを内部ネットワークへリダイレクトする</h1>
+<h1>pfを使い外部からのアクセスを内部ネットワークへ転送する</h1>
 <p>FreeBSDではファイアウォールとして<code><b>pf</b></code>を使えます。くわえてFreeBSDでは<code><b>bhyve</b></code>や<code><b>jail</b></code>のようなハイパーバイザやコンテナも利用できます。FreeBSD特有の連携というわけではありませんが、これらの機能を連携させることで、仮想マシンやコンテナ上のデータをそのホストで提供しているかのように振る舞えます。</p>
 <hr>
 <h2 id="nw">ネットワーク構成</h2>
