CSS: specify border 0 in top page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <style type="text/css">
 <!--
 table.article{border:0;}
-th,td.date{border:unset;text-align:left;}
-th,td.article{border:unset;text-align:left;padding:0 0 0 1em;}
+th,td.date{border:0;text-align:left;}
+th,td.article{border:0;text-align:left;padding:0 0 0 1em;}
 -->
 </style>
 <title>e-yuuki.org</title>
